corpus/c/syntax/case-02/snapshots/gcc15/dual_sink_structured/render.default.txt
error: [syntax] expected expression before ';' token @ src/main.c:2:17
want: expression
near: ; token
| src/main.c:2:17
|     int value = ;
|                 ^